src/test/deca/context/invalid/created/decl_class/param_void.deca
// Description :
//    declaration d'une méthode avec un paramètre de type void
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 : (3.17) Le type de l'identificateur ne peut être 'void'

class A{
void met(void a){}
}
